// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About Project test create project  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 50%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                >
                  projectsOrgs.aboutProject
                </p>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="orgIdentifier"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                      data-name="edit"
                      data-testid="description-edit"
                      icon="edit"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                      data-name="edit"
                      data-testid="tags-edit"
                      icon="edit"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  saveAndContinue
                </span>
              </button>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main preview StyledProps--flex StyledProps--flex-align-center-center"
            style="width: 50%;"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card projectCard previewProjectCard"
              data-testid="project-card-"
            >
              <div
                class="StyledProps--font StyledProps--main projectInfo previewProjectInfo StyledProps--padding-xlarge"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="colorBar"
                    style="background-color: rgb(0, 99, 247);"
                  />
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1;"
                  >
                    projectCard.projectName
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--margin-top-xsmall StyledProps--color StyledProps--color-grey700"
                  >
                    idLabel
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                    />
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
                      >
                        adminLabel 
                      </p>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <div
                          class="AvatarGroup--stack projectAvatarGroup"
                          style="--avatar-over-lap: -13px;"
                        >
                          <div
                            class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                                  tabindex="0"
                                >
                                  +
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
                      >
                        collaboratorsLabel 
                      </p>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <div
                          class="AvatarGroup--stack projectAvatarGroup"
                          style="--avatar-over-lap: -13px;"
                        >
                          <div
                            class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                                  tabindex="0"
                                >
                                  +
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main started StyledProps--padding-top-medium StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--border StyledProps--border-top StyledProps--border-bottom"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-xsmall"
                >
                  moduleRenderer.start
                </p>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="cd-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 26 21"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M15.201 2.9a5.325 5.325 0 00-2.498 3.256l-.34 1.273 2.656.712.34-1.273a2.615 2.615 0 013.2-1.847 2.617 2.617 0 011.847 3.2 2.614 2.614 0 01-3.199 1.847l-.03-.008-7.673-2.057a5.325 5.325 0 00-4.069.535 5.325 5.325 0 00-2.497 3.256 5.328 5.328 0 00.536 4.07 5.328 5.328 0 003.256 2.499 5.325 5.325 0 004.069-.535 5.325 5.325 0 002.498-3.256l.34-1.274-2.656-.712-.34 1.273a2.614 2.614 0 01-3.2 1.847 2.617 2.617 0 01-1.847-3.2 2.604 2.604 0 011.218-1.585 2.604 2.604 0 011.98-.262l7.704 2.066a5.325 5.325 0 004.069-.535 5.325 5.325 0 002.497-3.257 5.329 5.329 0 00-.536-4.07 5.329 5.329 0 00-3.256-2.498 5.325 5.325 0 00-4.069.534z"
                        fill="url(#cd-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cd-main_svg__paint0_linear"
                          x1="3.557"
                          x2="8.848"
                          y1="9.622"
                          y2="18.787"
                        >
                          <stop
                            stop-color="#62F91F"
                          />
                          <stop
                            offset="1"
                            stop-color="#5EAA53"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="cv-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M10.867 21.7l.307.182a1.97 1.97 0 001.021.268c.35.002.695-.09 1.002-.268l.306-.183c4.869-2.881 7.883-8.291 7.888-14.158v-.15a2.168 2.168 0 00-1.022-1.878l-1.39-.82-6.6 10.775a.716.716 0 01-.528.245.72.72 0 01-.536-.238l-3.521-3.84a.758.758 0 01-.165-.724.733.733 0 01.529-.51.714.714 0 01.694.216l2.984 3.261 5.918-9.91-4.537-2.68a1.96 1.96 0 00-2.043 0L4.022 5.512A2.168 2.168 0 003 7.391v.15c.001 5.862 3.007 11.271 7.867 14.158z"
                        fill="url(#cv-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cv-main_svg__paint0_linear"
                          x1="3.942"
                          x2="14.781"
                          y1="7.1"
                          y2="25.951"
                        >
                          <stop
                            stop-color="#9E74FF"
                          />
                          <stop
                            offset="1"
                            stop-color="#8A36FF"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="ce-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M1.01 16.246c.149 2.325 2.003 4.128 4.234 4.117H18.15c2.693 0 5.038-1.92 5.68-4.652.642-2.732-.584-5.569-2.97-6.872-1.227-.67-1.79-.793-2.543-.793-.752 0-1.499.157-2.442.993a.591.591 0 01-.58.219.615.615 0 01-.463-.426.653.653 0 01.136-.629c.585-.69.859-.825 1.564-1.084.705-.26.964-.26 1.777 0-2.023-3.007-6.296-4.078-9.292-2.152-2.997 1.927-4.04 5.956-2.382 9.198a.657.657 0 01-.019.632.6.6 0 01-.533.3.603.603 0 01-.515-.334 8.472 8.472 0 01-.89-3.19c-2.212.302-3.819 2.348-3.67 4.673zm12.345-3.213l.21.053c.566.14 1.89.465 1.89 1.883 0 1.169-.858 1.937-2.271 2.073v.586a.208.208 0 01-.207.207h-.52a.208.208 0 01-.207-.207v-.591c-.72-.08-1.342-.347-1.75-.759-.377-.382-.573-.876-.582-1.47h1.288c.035.786.617 1.252 1.57 1.252.327 0 1.393-.067 1.393-.92 0-.683-.792-.878-1.63-1.083a21.277 21.277 0 01-.434-.11c-.948-.25-1.96-.621-1.96-1.85 0-1.222 1.035-1.843 2.105-1.953V9.54c0-.115.093-.208.207-.208h.52c.114 0 .207.093.207.208v.627c.817.115 2.003.532 2.043 1.985h-1.29c-.07-.689-.53-1.024-1.406-1.024-.507 0-1.1.221-1.1.845 0 .564.332.65 1.924 1.059z"
                        fill="url(#ce-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="ce-main_svg__paint0_linear"
                          x1="-6.429"
                          x2="2.371"
                          y1="9.286"
                          y2="28.433"
                        >
                          <stop
                            stop-color="#00CFDE"
                          />
                          <stop
                            offset="1"
                            stop-color="#05A660"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="cf-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 20 21"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M18.378 10.6A8.375 8.375 0 0010 2.222 8.376 8.376 0 001.622 10.6a8.377 8.377 0 004.76 7.56l.007.012.05.102 1.177 2.04C3.243 19.245 0 15.303 0 10.6 0 5.076 4.476.6 10 .6s10 4.476 10 10a9.998 9.998 0 01-10.259 9.997.893.893 0 00-.014-.128c-.252-.071-.372-.213-.496-.427L3.965 10.38c-.189-.326-.16-.945.08-1.083a.354.354 0 01.227-.03l.059.012-.016.03-.017.036a.694.694 0 01.218.015l.093.03.04.022c.094.057.183.126.256.201l.066.083c.026.037.05.077.075.119.445.782 1.172 2.032 2.178 3.75l.134.228L5.027 9.77a.834.834 0 00-.122-.158l-.015-.018a.766.766 0 00-.272-.202l-.009-.003-.055-.03a1.075 1.075 0 00-.19-.074l-.033-.007.007-.011c.133-.245.609-1.005 1.526-1.327l.19-.059c2.14-.569 2.346.192 4.49-.378 1.034-.275 1.976-.915 2.35-1.191l.108-.082c.041-.031.063-.05.063-.05l3.34 5.333s-1.182.967-2.522 1.323c-2.142.57-2.347-.19-4.49.379-1.237.328-1.75 1.061-1.75 1.061l-.198-.335 2.916 5.03a8.376 8.376 0 008.017-8.371z"
                        fill="url(#cf-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cf-main_svg__paint0_linear"
                          x1="3.54"
                          x2="15.939"
                          y1="0.6"
                          y2="19.793"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="ci-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12.005 10.97a2.9 2.9 0 01-3.003-2.96 2.9 2.9 0 013.002-3.008 2.927 2.927 0 012.994 3.007 2.882 2.882 0 01-2.993 2.989v-.027zM6 .9a9.987 9.987 0 014.203-.9C15.56-.053 19.945 4.258 20 9.63v.144A9.928 9.928 0 0119.103 14l-3.092-3.102a5.15 5.15 0 00.762-2.697 4.743 4.743 0 00-4.93-4.937 5.013 5.013 0 00-2.688.765L6 .899zM3.991 2.2l-.099.09L7.36 5.734a5.16 5.16 0 00-.766 2.762c-.081 2.635 1.977 4.838 4.597 4.921.116.003.232.002.349-.002a5.116 5.116 0 002.774-.77L17.8 16.13A9.792 9.792 0 019.91 20c-5.393.08-9.829-4.25-9.908-9.673L0 10.153A9.645 9.645 0 013.99 2.2z"
                        fill="url(#ci-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="ci-main_svg__paint0_linear"
                          x1="-6.46"
                          x2="6.46"
                          y1="6.46"
                          y2="26.46"
                        >
                          <stop
                            stop-color="#73DFE7"
                          />
                          <stop
                            offset="1"
                            stop-color="#0095F7"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`About Project test create project  2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 50%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                >
                  projectsOrgs.aboutProject
                </p>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          dummy_name
                        </span>
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="dummy name"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="orgIdentifier"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 0px;"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                  </label>
                  <div
                    class="bp3-form-group"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        maxlength="1024"
                        name="description"
                        placeholder="common.descriptionPlaceholder"
                      >
                         This is new description
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                      data-name="edit"
                      data-testid="tags-edit"
                      icon="edit"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  saveAndContinue
                </span>
              </button>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main preview StyledProps--flex StyledProps--flex-align-center-center"
            style="width: 50%;"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card projectCard previewProjectCard"
              data-testid="project-card-dummy_name"
            >
              <div
                class="StyledProps--font StyledProps--main projectInfo previewProjectInfo StyledProps--padding-xlarge"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="colorBar"
                    style="background-color: rgb(0, 99, 247);"
                  />
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1;"
                  >
                    dummy name
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--margin-top-xsmall StyledProps--color StyledProps--color-grey700"
                  >
                    idLabel
                  </p>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--padding-top-small"
                    style="--text-line-clamp: 2;"
                  >
                     This is new description
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                    />
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
                      >
                        adminLabel 
                      </p>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <div
                          class="AvatarGroup--stack projectAvatarGroup"
                          style="--avatar-over-lap: -13px;"
                        >
                          <div
                            class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                                  tabindex="0"
                                >
                                  +
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
                      >
                        collaboratorsLabel 
                      </p>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                      >
                        <div
                          class="AvatarGroup--stack projectAvatarGroup"
                          style="--avatar-over-lap: -13px;"
                        >
                          <div
                            class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                          >
                            <span
                              class="bp3-popover-wrapper Avatar--avatarPopOver"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="Avatar--AvatarInner"
                                  style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                                  tabindex="0"
                                >
                                  +
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main started StyledProps--padding-top-medium StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--border StyledProps--border-top StyledProps--border-bottom"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-xsmall"
                >
                  moduleRenderer.start
                </p>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="cd-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 26 21"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M15.201 2.9a5.325 5.325 0 00-2.498 3.256l-.34 1.273 2.656.712.34-1.273a2.615 2.615 0 013.2-1.847 2.617 2.617 0 011.847 3.2 2.614 2.614 0 01-3.199 1.847l-.03-.008-7.673-2.057a5.325 5.325 0 00-4.069.535 5.325 5.325 0 00-2.497 3.256 5.328 5.328 0 00.536 4.07 5.328 5.328 0 003.256 2.499 5.325 5.325 0 004.069-.535 5.325 5.325 0 002.498-3.256l.34-1.274-2.656-.712-.34 1.273a2.614 2.614 0 01-3.2 1.847 2.617 2.617 0 01-1.847-3.2 2.604 2.604 0 011.218-1.585 2.604 2.604 0 011.98-.262l7.704 2.066a5.325 5.325 0 004.069-.535 5.325 5.325 0 002.497-3.257 5.329 5.329 0 00-.536-4.07 5.329 5.329 0 00-3.256-2.498 5.325 5.325 0 00-4.069.534z"
                        fill="url(#cd-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cd-main_svg__paint0_linear"
                          x1="3.557"
                          x2="8.848"
                          y1="9.622"
                          y2="18.787"
                        >
                          <stop
                            stop-color="#62F91F"
                          />
                          <stop
                            offset="1"
                            stop-color="#5EAA53"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="cv-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M10.867 21.7l.307.182a1.97 1.97 0 001.021.268c.35.002.695-.09 1.002-.268l.306-.183c4.869-2.881 7.883-8.291 7.888-14.158v-.15a2.168 2.168 0 00-1.022-1.878l-1.39-.82-6.6 10.775a.716.716 0 01-.528.245.72.72 0 01-.536-.238l-3.521-3.84a.758.758 0 01-.165-.724.733.733 0 01.529-.51.714.714 0 01.694.216l2.984 3.261 5.918-9.91-4.537-2.68a1.96 1.96 0 00-2.043 0L4.022 5.512A2.168 2.168 0 003 7.391v.15c.001 5.862 3.007 11.271 7.867 14.158z"
                        fill="url(#cv-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cv-main_svg__paint0_linear"
                          x1="3.942"
                          x2="14.781"
                          y1="7.1"
                          y2="25.951"
                        >
                          <stop
                            stop-color="#9E74FF"
                          />
                          <stop
                            offset="1"
                            stop-color="#8A36FF"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="ce-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M1.01 16.246c.149 2.325 2.003 4.128 4.234 4.117H18.15c2.693 0 5.038-1.92 5.68-4.652.642-2.732-.584-5.569-2.97-6.872-1.227-.67-1.79-.793-2.543-.793-.752 0-1.499.157-2.442.993a.591.591 0 01-.58.219.615.615 0 01-.463-.426.653.653 0 01.136-.629c.585-.69.859-.825 1.564-1.084.705-.26.964-.26 1.777 0-2.023-3.007-6.296-4.078-9.292-2.152-2.997 1.927-4.04 5.956-2.382 9.198a.657.657 0 01-.019.632.6.6 0 01-.533.3.603.603 0 01-.515-.334 8.472 8.472 0 01-.89-3.19c-2.212.302-3.819 2.348-3.67 4.673zm12.345-3.213l.21.053c.566.14 1.89.465 1.89 1.883 0 1.169-.858 1.937-2.271 2.073v.586a.208.208 0 01-.207.207h-.52a.208.208 0 01-.207-.207v-.591c-.72-.08-1.342-.347-1.75-.759-.377-.382-.573-.876-.582-1.47h1.288c.035.786.617 1.252 1.57 1.252.327 0 1.393-.067 1.393-.92 0-.683-.792-.878-1.63-1.083a21.277 21.277 0 01-.434-.11c-.948-.25-1.96-.621-1.96-1.85 0-1.222 1.035-1.843 2.105-1.953V9.54c0-.115.093-.208.207-.208h.52c.114 0 .207.093.207.208v.627c.817.115 2.003.532 2.043 1.985h-1.29c-.07-.689-.53-1.024-1.406-1.024-.507 0-1.1.221-1.1.845 0 .564.332.65 1.924 1.059z"
                        fill="url(#ce-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="ce-main_svg__paint0_linear"
                          x1="-6.429"
                          x2="2.371"
                          y1="9.286"
                          y2="28.433"
                        >
                          <stop
                            stop-color="#00CFDE"
                          />
                          <stop
                            offset="1"
                            stop-color="#05A660"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="cf-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 20 21"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M18.378 10.6A8.375 8.375 0 0010 2.222 8.376 8.376 0 001.622 10.6a8.377 8.377 0 004.76 7.56l.007.012.05.102 1.177 2.04C3.243 19.245 0 15.303 0 10.6 0 5.076 4.476.6 10 .6s10 4.476 10 10a9.998 9.998 0 01-10.259 9.997.893.893 0 00-.014-.128c-.252-.071-.372-.213-.496-.427L3.965 10.38c-.189-.326-.16-.945.08-1.083a.354.354 0 01.227-.03l.059.012-.016.03-.017.036a.694.694 0 01.218.015l.093.03.04.022c.094.057.183.126.256.201l.066.083c.026.037.05.077.075.119.445.782 1.172 2.032 2.178 3.75l.134.228L5.027 9.77a.834.834 0 00-.122-.158l-.015-.018a.766.766 0 00-.272-.202l-.009-.003-.055-.03a1.075 1.075 0 00-.19-.074l-.033-.007.007-.011c.133-.245.609-1.005 1.526-1.327l.19-.059c2.14-.569 2.346.192 4.49-.378 1.034-.275 1.976-.915 2.35-1.191l.108-.082c.041-.031.063-.05.063-.05l3.34 5.333s-1.182.967-2.522 1.323c-2.142.57-2.347-.19-4.49.379-1.237.328-1.75 1.061-1.75 1.061l-.198-.335 2.916 5.03a8.376 8.376 0 008.017-8.371z"
                        fill="url(#cf-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cf-main_svg__paint0_linear"
                          x1="3.54"
                          x2="15.939"
                          y1="0.6"
                          y2="19.793"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main grayOutIcons"
                    data-icon="ci-main"
                  >
                    <svg
                      fill="none"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12.005 10.97a2.9 2.9 0 01-3.003-2.96 2.9 2.9 0 013.002-3.008 2.927 2.927 0 012.994 3.007 2.882 2.882 0 01-2.993 2.989v-.027zM6 .9a9.987 9.987 0 014.203-.9C15.56-.053 19.945 4.258 20 9.63v.144A9.928 9.928 0 0119.103 14l-3.092-3.102a5.15 5.15 0 00.762-2.697 4.743 4.743 0 00-4.93-4.937 5.013 5.013 0 00-2.688.765L6 .899zM3.991 2.2l-.099.09L7.36 5.734a5.16 5.16 0 00-.766 2.762c-.081 2.635 1.977 4.838 4.597 4.921.116.003.232.002.349-.002a5.116 5.116 0 002.774-.77L17.8 16.13A9.792 9.792 0 019.91 20c-5.393.08-9.829-4.25-9.908-9.673L0 10.153A9.645 9.645 0 013.99 2.2z"
                        fill="url(#ci-main_svg__paint0_linear)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="ci-main_svg__paint0_linear"
                          x1="-6.46"
                          x2="6.46"
                          y1="6.46"
                          y2="26.46"
                        >
                          <stop
                            stop-color="#73DFE7"
                          />
                          <stop
                            offset="1"
                            stop-color="#0095F7"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`About Project test edit project  1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 100%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                >
                  projectsOrgs.projectEdit
                </p>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          test
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="test modified"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="orgIdentifier"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="Org Name"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 0px;"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                  </label>
                  <div
                    class="bp3-form-group"
                    data-id="description-3"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        maxlength="1024"
                        name="description"
                        placeholder="common.descriptionPlaceholder"
                      >
                        refetch returns new data
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                      data-name="edit"
                      data-testid="tags-edit"
                      icon="edit"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  saveAndContinue
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`About Project test edit project  2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-xxlarge"
            style="width: 100%;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="min-height: 450px;"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
                >
                  projectsOrgs.projectEdit
                </p>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          test
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_name"
                    >
                      Name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="dummy name"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-xsmall"
              >
                <div
                  class="bp3-form-group"
                  data-id="color-1"
                >
                  <label
                    class="bp3-label"
                    for="color"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_color"
                    >
                      color
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button Button--button StyledProps--font StyledProps--main ColorPicker--picker Button--with-current-color"
                          style="width: 60px; height: 38px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="ColorPicker--color"
                              style="width: calc(60px - 45px); background: rgb(0, 99, 247);"
                            />
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="orgIdentifier-2"
                >
                  <label
                    class="bp3-label"
                    for="orgIdentifier"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="projectsForm_orgIdentifier"
                    >
                      orgLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="orgIdentifier"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="Org Name"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main main"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 0px;"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                  </label>
                  <div
                    class="bp3-form-group"
                    data-id="description-3"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        maxlength="1024"
                        name="description"
                        placeholder="common.descriptionPlaceholder"
                      >
                        refetch returns new data
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main"
                    style="font-size: 13px; font-weight: normal;"
                  >
                    optionalField
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                      data-name="edit"
                      data-testid="tags-edit"
                      icon="edit"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  saveAndContinue
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
